objects/DummyCMDTType__mdt.object
<CustomObject>
    <description>Used to pass the Apex test named, CSVToCMDTRecordsControllerTest, successfully. 
It can be deleted after the installation of the package and you can update the &apos;cmdtApiName&apos; with API name of your CMDT type in the CSVToCMDTRecordsControllerTest Apex class.</description>
    <fields>
        <fullName>BooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BooleanField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateField__c</fullName>
        <label>DateField</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTimeField__c</fullName>
        <label>DateTimeField</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailField__c</fullName>
        <label>EmailField</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NumberField__c</fullName>
        <label>NumberField</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhoneField__c</fullName>
        <label>PhoneField</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PicklistField__c</fullName>
        <label>PicklistField</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                    <default>true</default>
                    <label>Value1</label>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
                <value>
                    <fullName>Value3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <label>TextField</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DummyCMDT Type</label>
    <pluralLabel>DummyCMDT Types</pluralLabel>
</CustomObject>